# training_task_5dhub

./: README.md  main.py  pyproject.toml
